<resources>
    <string name="app_name">MathGameApp</string>
    <string name="titleText">Mitchell\'s Math Mania</string>
    <string name="playButton">Play</string>
    <string name="statsButton">Stats</string>
    <string name="additionButton">+</string>
    <string name="multiplicationButton">*</string>
    <string name="subtractionButton">-</string>
    <string name="divisionButton">/</string>
    <string name="defaultOutput">Select at least one operator</string>
    <string name="instructionText">Solve the equation</string>
    <string name="submitButton">Submit Answer</string>
    <string name="answerHint">Answer</string>
    <string name="operatorsSelected">Operators you have selected</string>
    <string name="previousEquationTitle">The previous equation</string>
    <string name="divisionNote">Round quotients down to the nearest whole number</string>
    <string name="correctAnswers">Correct Answers</string>
    <string name="incorrectAnswers">Incorrect Answers</string>
</resources>